# micro_file_converter

./: .gitignore  docker-compose.yml  makefile
common/: common.go  (+2 more)
image_service/: .gitignore  Cargo.toml  dockerfile
image_service/src/: lib.rs  main.rs
image_service/src/adapters/: image_engine.rs  local_storage.rs  mod.rs  rabbit_publisher.rs  rabbit_subscriber.rs  transform_handler.rs
image_service/src/application/: dispatcher.rs  engine.rs  factory.rs  local_storage.rs  mod.rs  publisher.rs  transform_engine.rs  transform_service.rs
image_service/src/domain/: config.rs  constants.rs  dto.rs  error.rs  generator.rs  image_transform.rs  instructions.rs  kind.rs  mod.rs  pipeline.rs  publisher.rs  rect.rs  storage.rs  subscriber.rs  transform.rs  transform_pipeline.rs  transform_type.rs
image_service/src/engine/: blur.rs  brighten.rs  crop.rs  fractal.rs  invert.rs  mod.rs  pipeline.rs  rotate.rs  service.rs
image_service/src/features/: blur.rs  brighten.rs  contrast.rs  crop.rs  encoder.rs  factory.rs  fractal.rs  invert.rs  mirror.rs  mod.rs  pipeline.rs  rotate.rs  transform.rs
image_service/src/image_processor/: image_processor.rs  mod.rs  processor.rs  transform.rs
image_service/src/infrastructure/: image_engine.rs  mod.rs  rabbit_publisher.rs  rabbit_subscriber.rs
image_service/src/lib/: lib.rs
image_service/src/ports/: mod.rs  publisher.rs  storage.rs
image_service/src/rabbit/: consumer.rs  dispatcher.rs  dto.rs  file_dto.rs  mod.rs  transform_dto.rs  upload.rs  upload_dto.rs
image_service/src/ui/: app.rs  controls.rs  message.rs  mod.rs
(+412 files in other folders)
