[package]
name = "image_service"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.24.3"
num-complex = "0.4.2"
lapin = { version = " 2.5.5" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-lite = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

