[package]
name = "image_service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
image = "0.24.3"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"  
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
num-complex = "0.4.2"
clap={ version = "4.5.54" }
lapin = { version = " 2.5.5" }
tokio = { version = "1", features = ["full"] }
futures-lite = "2"
futures-util = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
iced = { version = "0.10", features = ["image", "tokio"] }
rfd = "0.14"
async-trait = "0.1"

